--- a/src/pug/pages/profile-message-chat.pug
+++ b/src/pug/pages/profile-message-chat.pug
@@ -91,7 +91,7 @@ block content
 
                     .profile-message__message-row
                       .profile-message__message.profile-message__message--right
-                        span Здравствуйте! Давайте да.
+                        span Здравствуйте! Давайте да. Одиннадцатиклассница-одиннадцатиклассница
                         .profile-message__message-time 21:31
 
                     .profile-message__message-row
