--- a/src/pug/elements/popup.pug
+++ b/src/pug/elements/popup.pug
@@ -192,3 +192,12 @@
   button.btn.btn--dark.popup-add-users__btn
     span Добавить участников
 //end #popup-add-users
+
+//begin #popup-add-points
+#popup-add-points.popup-add-points.popup
+  span.popup__close
+    +svg('close')
+
+  h3.popup-add-points__title Вы получаете бонусные баллы за активности на платформе
+  h4.popup-add-points__points 1 балл = 1 рублю
+//end #popup-add-points
