--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -78,5 +78,6 @@
 @import 'pages/search-result';
 @import 'pages/profile-message';
 @import 'pages/profile-balance';
+@import 'pages/profile-pay';
 @import 'pages/404';
 @import 'pages/tnx';
