add class for dark breadcrumbs

--- a/src/pug/sections/header/profile-header.pug
+++ b/src/pug/sections/header/profile-header.pug
@@ -204,13 +204,13 @@
       .profile-header__user-ava
         img(src="assets/img/profile-header-ava.jpg" alt="ava")
       .profile-header__user-body
-        h3.profile-header__user-name Мария Иванова
+        h3.profile-header__user-name Иванов Федор Никанорович
         h4.profile-header__user-rait
-          span 2 000
+          span 19 000
           =' '
           |&#x20bd;
         h4.profile-header__user-points
-          span 400
+          span 21 000
           =' '
           |баллов
         .profile-header__user-arrow
@@ -220,9 +220,9 @@
           a(href="#").profile-header__user-link Моя страница
         li.profile-header__user-item.active
           a(href="#").profile-header__user-link
-            |Мой счет: 2000 &#x20bd;
+            |Мой счет: 19 000 &#x20bd;
             span
-            |400 баллов
+            |21 000 баллов
         li.profile-header__user-item
           a(href="#").profile-header__user-link Редактировать
         li.profile-header__user-item
