--- a/src/style/elements/_breadcrumbs.scss
+++ b/src/style/elements/_breadcrumbs.scss
@@ -41,7 +41,8 @@
 }
 
 .teachers,
-.my-courses {
+.my-courses,
+.breadcrumbs--dark {
   .breadcrumbs__list {
     margin-bottom: 20px;
     padding-top: 15px;
