--- a/src/pug/sections/course-top.pug
+++ b/src/pug/sections/course-top.pug
@@ -1,7 +1,7 @@
 //begin course-top
 .course-top(style="background-image:url('assets/img/bg-course-top.jpg')")
   .container
-    .course-top__pic-exclusive
+    .course-top__pic-label.course-top__pic-label--recommend
 
     //begin course-top__left
     .course-top__left
